--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -21,17 +21,10 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="/">Home</a></li>
-          <li><a ng-href="/about">About</a></li>
-          <li><a ng-href="/">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">nprBumps</h3>
-      </div>
+    <div>
+      <div ng-include="'views/layouts/header.html'"></div>
 
-      <div ng-view=""></div>
+      <div class="container" ng-view=""></div>
 
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
