Get some markup going for daily bumps

--- a/angular/app/index.html
+++ b/angular/app/index.html
@@ -27,7 +27,7 @@
       <div class="container" ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the prBumps team</p>
       </div>
     </div>
 
